[gd_scene load_steps=8 format=3 uid="uid://cgh2xoiinlgxr"]

[ext_resource type="Script" uid="uid://d4u66c076n16" path="res://Scripts/main_character.gd" id="1_5c801"]
[ext_resource type="Texture2D" uid="uid://b6pktyox1d35j" path="res://Assets/player/Sprite-0002.png" id="1_8euya"]
[ext_resource type="Texture2D" uid="uid://cwf6epqdlt1dd" path="res://Assets/player/Sprite-0003.png" id="2_5c801"]
[ext_resource type="Texture2D" uid="uid://u6mu0gtrt3fo" path="res://Assets/player/Sprite-0004.png" id="3_lp565"]
[ext_resource type="Texture2D" uid="uid://dowctvy6jirbl" path="res://Assets/player/Sprite-0005.png" id="4_qrokc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1amv2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8euya")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8euya")
}, {
"duration": 1.0,
"texture": ExtResource("2_5c801")
}, {
"duration": 1.0,
"texture": ExtResource("3_lp565")
}, {
"duration": 1.0,
"texture": ExtResource("4_qrokc")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f3wm"]
size = Vector2(20, 32)

[node name="Main_Character" type="CharacterBody2D"]
process_mode = 3
script = ExtResource("1_5c801")

[node name="main_character_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_1amv2")
animation = &"walk"
frame_progress = 0.457678

[node name="main_character_collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1f3wm")

[node name="dialogue_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="dialogue_collider" type="CollisionShape2D" parent="dialogue_area"]
shape = SubResource("RectangleShape2D_1f3wm")

[connection signal="area_entered" from="dialogue_area" to="." method="_on_dialogue_area_area_entered"]
